name:                hnormalise
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/itkovian/hnormalise#readme
license:             BSD3
license-file:        LICENSE
author:              Andy Georges
maintainer:          itkovian@gmail.com
copyright:           2017 Ghent University
category:            Command line
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Common.Parser
                     , Huppel.Internal
                     , Huppel.Json
                     , Huppel.Parser
                     , Lmod.Internal
                     , Lmod.Json
                     , Lmod.Parser
                     , Torque.Internal
                     , Torque.Json
                     , Torque.Parser
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , attoparsec
                     , bytestring
                     , containers
                     , parsec
                     , text
                     , aeson
  default-language:    Haskell2010

executable hnormalise-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hnormalise
                     , aeson
                     , aeson-pretty
                     , async
                     , attoparsec
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , parsec
                     , resourcet
                     , text
                     , word8
  default-language:    Haskell2010

test-suite hnormalise-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , attoparsec
                     , conduit-extra
                     , hnormalise
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hnormalise
